Cleaned up eventtypes

--- a/default/eventtypes.conf
+++ b/default/eventtypes.conf
@@ -1,6 +1,7 @@
 ﻿
 [sccm_malware]
-search = `sccm_index` sourcetype=sccm:malware
+search = sourcetype="sccm:malware"
+# tags: attack, malware
 
 [sccm_status_message]
 search = sourcetype="sccm:status_message"
@@ -9,4 +10,5 @@ search = sourcetype="sccm:status_message"
 search = sourcetype="sccm:status_message" (component="SMS_AD_FOREST_DISCOVERY_MANAGER" OR component="SMS_AD_SYSTEM_DISCOVERY_AGENT" OR component="SMS_AD_USER_DISCOVERY_AGENT")
 
 [sccm_change_audit]
-search = eventtype=sccm_status_message modulename="SMS Provider" component="Microsoft.ConfigurationManagement.exe"
+search = sourcetype="sccm:status_message" modulename="SMS Provider" component="Microsoft.ConfigurationManagement.exe"
+# tags: audit, change
