--- a/default/macros.conf
+++ b/default/macros.conf
@@ -24,28 +24,24 @@ definition = lookup sccm_collection_lookup collectionid OUTPUT collection
 iseval = 0
 
 [sccm_arp_installed]
-definition = inputlookup sccm_addremoveprograms.csv
+definition = sourcetype="sccm:installed_software" | dedup resourceid, softwarepropertieshash0 | search active=1
 iseval = 0
 
 [sccm_arp_removed]
-definition = eventtype=sccm_arp | dedup ResourceID, DisplayName, ProductVersion | search Active=0
+definition = sourcetype="sccm:installed_software" | dedup resourceid, softwarepropertieshash0 | search active=0
 iseval = 0
 
 [sccm_arp_GetInstalledSoftwareByResourceID(1)]
 args = resourceid
-definition = `sccm_arp_installed` | search ResourceID=$resourceid$
+definition = `sccm_arp_installed` | search resourceid=$resourceid$
 iseval = 0
 
 [sccm_scheduledsearch_collectionmembership]
-definition = dbquery `sccm_database` "SELECT CollectionID as collectionid, ResourceID as resourceid FROM v_ClientCollectionMembers" | outputlookup sccm_collectionmembership.csv
+definition = dbquery `sccm_database` "SELECT collectionid, resourceid FROM v_ClientCollectionMembers" | outputlookup sccm_collectionmembership.csv
 iseval = 0
 
 [sccm_lookup_status_message_desc]
 definition = foreach string* [rex field=<<FIELD>> mode=sed "s/\\\\\\\/\\\/g" ] | lookup status_message_desc messageid, module_name as modulename OUTPUT description | foreach string* [eval description = if(match(description, "\$<<FIELD>>\$"), replace(description, "\$<<FIELD>>\$", coalesce('<<FIELD>>', "")), description)]
-iseval = 0
-
-[sccm_scheduledsearch_arp]
-definition = dbquery `sccm_database` "SELECT DISTINCT v_R_System_Valid.resourceid, [timestamp], DisplayName0 as product_name, InstallDate0 as product_installdate, Publisher0 as product_publisher, Version0 as product_version FROM v_R_System_Valid INNER JOIN v_Add_Remove_Programs on v_Add_Remove_Programs.ResourceID = v_R_System_Valid.ResourceID" | convert ctime(timestamp) | outputlookup sccm_addremoveprograms.csv
 iseval = 0
 
 [sccm_scheduledsearch_clientstatus]
