--- a/default/app.conf
+++ b/default/app.conf
@@ -3,14 +3,17 @@
 #
 
 [install]
-is_configured = 0
+is_configured = true
+build = 1
 
 [ui]
 is_visible = 1
 label = App for SCCM
 
 [launcher]
-author = Christopher Summers
+author = ChrisSummers
 description = 
-version = 1.0
+version = 0.2
 
+#[package]
+#id = ta_sccm
