Added dbinputs for sccm:resource and sccm:inventory

--- a/default/inputs.conf
+++ b/default/inputs.conf
@@ -45,3 +45,28 @@ output.timestamp.format = yyyy-MM-dd HH:mm:ss.SSS
 query = with software as (\r\nselect\r\n  [timestamp],\r\n  resourceid,\r\n  active=1,\r\n  softwarepropertieshash0,\r\n  softwarepropertieshashex0,\r\n  normalizedname as product_name,\r\n  normalizedversion as product_version,\r\n  normalizedpublisher as product_publisher,\r\n  InstallDate0 as installation_date,\r\n  categoryname as category,\r\n  familyname as family\r\nfrom v_gs_installed_software_categorized\r\nUNION ALL\r\nselect\r\n  s.[timestamp],\r\n  s.resourceid,\r\n  active=0,\r\n  s.softwarepropertieshash0,\r\n  s.softwarepropertieshashex0,\r\n  coalesce (sl.commonname, s.productname0) as product_name,\r\n  coalesce (sl.commonpublisher, s.publisher0) as product_publisher,\r\n  coalesce (sl.commonversion, s.productversion0) as product_version,\r\n  installdate0 as installation_date,\r\n  fam.familyname,\r\n  cat.categoryname\r\nfrom v_hs_installed_software s\r\nleft outer join  v_lu_softwarehash sh\r\n   on sh.softwarepropertieshash = s.softwarepropertieshash0\r\nleft outer join v_lu_softwarelist sl\r\n  on sl.softwareid = sh.softwareid\r\ninner join v_lu_category as cat\r\n  on cat.categoryid = coalesce(sl.categoryid, 4892)\r\ninner join v_lu_family as fam\r\n  on fam.familyid = coalesce(sl.familyid, 4891)\r\nwhere softwarepropertieshash0 is not null)\r\nselect *\r\nfrom software\r\n{{WHERE $rising_column$ > ?}}\r\n
 sourcetype = sccm:installed_software
 tail.rising.column = timestamp
+
+[dbmon-tail://sccm/sccm_agent_discoveries_dbinput]
+host = sccm
+index = sccm
+interval = auto
+output.format = kv
+output.timestamp = 1
+output.timestamp.column = agenttime
+output.timestamp.format = yyyy-MM-dd HH:mm:ss.SSS
+query = select \r\n  da.agenttime,\r\n  disc.resourceid, \r\n  disc.netbios_name0 as name, \r\n  da.agentname\r\nfrom v_r_system disc\r\nleft join v_agentdiscoveries da\r\n  on da.resourceid = disc.resourceid\r\n{{WHERE $rising_column$ > ?}}
+sourcetype = sccm:discovery
+tail.rising.column = agenttime
+table = sccm_agent_discoveries_dbinput
+
+[dbmon-tail://sccm/sccm_resource_dbinput]
+host = sccm
+index = sccm
+interval = auto
+output.format = kv
+output.timestamp = 1
+output.timestamp.column = timestamp
+output.timestamp.format = yyyy-MM-dd HH:mm:ss.SSS
+query = WITH s as (\r\nSELECT \r\n  COALESCE(lastactivetime, disc.lastdiscoverytime) as [timestamp],\r\n  machineid as resourceid, \r\n  CASE architecturekey\r\n    WHEN 5 THEN 'system'\r\n	WHEN 2 THEN 'unknown system'\r\n  END as resource_type, \r\n  name, \r\n  smsid, \r\n  sitecode, \r\n  domain, \r\n  clientedition, \r\n  clienttype, \r\n  clientversion, \r\n  isclient, \r\n  isobsolete, \r\n  isactive, \r\n  isvirtualmachine, \r\n  isaoaccapable, \r\n  deviceowner, \r\n  suppressautoprovision, \r\n  isapproved, \r\n  isblocked, \r\n  isalwaysinternet, \r\n  isinternetenabled, \r\n  clientcerttype, \r\n  username, \r\n  lastclientchecktime, \r\n  clientcheckpass, \r\n  adsitename, \r\n  userdomainname, \r\n  adlastlogontime as adlastlogontime_epoch, \r\n  clientremediationsuccess, \r\n  clientactivestatus, \r\n  laststatusmessage as laststatusmessage_epoch, \r\n  lastpolicyrequest as lastpolicyrequest_epoch, \r\n  lastddr as lastddr_epoch, \r\n  lasthardwarescan as lasthardwarescan_epoch, \r\n  lastsoftwarescan as lastsoftwarescan_epoch, \r\n  lastmpservername, \r\n  COALESCE(lastactivetime, disc.lastdiscoverytime) as lastactivetime_epoch,\r\n  cp_status, \r\n  cp_latestprocessingattempt, \r\n  cp_lastinstallationerror, \r\n  deviceos, \r\n  ep_deploymentstate, \r\n  ep_deploymenterrorcode, \r\n  ep_deploymentdescription, \r\n  ep_policyapplicationstate, \r\n  ep_policyapplicationerrorcode, \r\n  ep_policyapplicationdescription, \r\n  ep_enabled, \r\n  ep_clientversion, \r\n  ep_productstatus, \r\n  ep_engineversion, \r\n  ep_antivirusenabled, \r\n  ep_antivirussignatureversion, \r\n  ep_antivirussignatureupdatedatetime as ep_antivirussignatureupdatedatetime_epoch, \r\n  ep_antispywareenabled, \r\n  ep_antispywaresignatureversion, \r\n  ep_antispywaresignatureupdatedatetime as ep_antispywaresignatureupdatedatetime_epoch, \r\n  ep_lastfullscandatetimestart as ep_lastfullscandatetimestart_epoch, \r\n  ep_lastfullscandatetimeend as ep_lastfullscandatetimeend_epoch, \r\n  ep_lastquickscandatetimestart as ep_lastquickscandatetimestart_epoch, \r\n  ep_lastquickscandatetimeend as ep_lastquickscandatetimeend_epoch, \r\n  ep_infectionstatus, \r\n  ep_pendingfullscan, \r\n  ep_pendingreboot, \r\n  ep_pendingmanualsteps, \r\n  ep_pendingofflinescan, \r\n  ep_lastinfectiontime as ep_lastinfectiontime_epoch, \r\n  ep_lastthreatname, \r\n  unknown \r\nFROM v_combineddeviceresources\r\nINNER JOIN (\r\n  select \r\n  ResourceId, \r\n  max(agenttime) as lastdiscoverytime\r\nfrom v_agentdiscoveries group by ResourceId\r\n) as disc\r\n  on disc.ResourceId = v_combineddeviceresources.machineid)\r\nselect * from s\r\n{{WHERE $rising_column$ > ?}}
+sourcetype = sccm:resource
+tail.rising.column = timestamp
