--- a/default/transforms.conf
+++ b/default/transforms.conf
@@ -2,6 +2,7 @@
 [sccm_collectionmembership_lookup]
 filename = sccm_collectionmembership.csv
 
+# collectionid,collid,collection
 [sccm_collection_lookup]
 filename = sccm_collections.csv
 
