Fixed the sccm:resource EVAL again. DERP

--- a/default/props.conf
+++ b/default/props.conf
@@ -1,15 +1,15 @@
 [sccm:resource]
-EVAL-adlastlogontime = strftime(adlastlogontime_epoch, "%d/%m/%Y %I:%M:%S %p")
-EVAL-ep_antispywaresignatureupdatedatetime = strftime(ep_antispywaresignatureupdatedatetime_epoch, "%d/%m/%Y %I:%M:%S %p")
-EVAL-ep_antivirussignatureupdatedatetime = strftime(ep_antivirussignatureupdatedatetime_epoch, "%d/%m/%Y %I:%M:%S %p")
-EVAL-ep_lastfullscandatetimeend = strftime(ep_lastfullscandatetimeend_epoch, "%d/%m/%Y %I:%M:%S %p")
-EVAL-ep_lastinfectiontime = strftime(ep_lastinfectiontime_epoch, "%d/%m/%Y %I:%M:%S %p")
-EVAL-ep_lastquickscandatetimeend = strftime(ep_lastquickscandatetimeend_epoch, "%d/%m/%Y %I:%M:%S %p")
-EVAL-ep_lastquickscandatetimestart = strftime(ep_lastquickscandatetimestart_epoch, "%d/%m/%Y %I:%M:%S %p")
-EVAL-lastactivetime = strftime(lastactivetime_epoch, "%d/%m/%Y %I:%M:%S %p")
-EVAL-lastclientchecktime = strftime(lastclientchecktime_epoch, "%d/%m/%Y %I:%M:%S %p")
-EVAL-lastddr = strftime(lastddr_epoch, "%d/%m/%Y %I:%M:%S %p")
-EVAL-lasthardwarescan = strftime(lasthardwarescan_epoch, "%d/%m/%Y %I:%M:%S %p")
-EVAL-lastpolicyrequest = strftime(lastpolicyrequest_epoch, "%d/%m/%Y %I:%M:%S %p")
-EVAL-lastsoftwarescan = strftime(lastsoftwarescan_epoch, "%d/%m/%Y %I:%M:%S %p")
-EVAL-laststatusmessage = strftime(laststatusmessage_epoch, "%d/%m/%Y %I:%M:%S %p")
+EVAL-adlastlogontime = strftime(adlastlogontime_epoch, "%F %I:%M:%S %p")
+EVAL-ep_antispywaresignatureupdatedatetime = strftime(ep_antispywaresignatureupdatedatetime_epoch, "%F %I:%M:%S %p")
+EVAL-ep_antivirussignatureupdatedatetime = strftime(ep_antivirussignatureupdatedatetime_epoch, "%F %I:%M:%S %p")
+EVAL-ep_lastfullscandatetimeend = strftime(ep_lastfullscandatetimeend_epoch, "%F %I:%M:%S %p")
+EVAL-ep_lastinfectiontime = strftime(ep_lastinfectiontime_epoch, "%F %I:%M:%S %p")
+EVAL-ep_lastquickscandatetimeend = strftime(ep_lastquickscandatetimeend_epoch, "%F %I:%M:%S %p")
+EVAL-ep_lastquickscandatetimestart = strftime(ep_lastquickscandatetimestart_epoch, "%F %I:%M:%S %p")
+EVAL-lastactivetime = strftime(lastactivetime_epoch, "%F %I:%M:%S %p")
+EVAL-lastclientchecktime = strftime(lastclientchecktime_epoch, "%F %I:%M:%S %p")
+EVAL-lastddr = strftime(lastddr_epoch, "%F %I:%M:%S %p")
+EVAL-lasthardwarescan = strftime(lasthardwarescan_epoch, "%F %I:%M:%S %p")
+EVAL-lastpolicyrequest = strftime(lastpolicyrequest_epoch, "%F %I:%M:%S %p")
+EVAL-lastsoftwarescan = strftime(lastsoftwarescan_epoch, "%F %I:%M:%S %p")
+EVAL-laststatusmessage = strftime(laststatusmessage_epoch, "%F %I:%M:%S %p")
