Working on final paackaging. Removed software index and local directory

--- a/default/app.conf
+++ b/default/app.conf
@@ -12,8 +12,8 @@ label = App for SCCM
 
 [launcher]
 author = ChrisSummers
-description = 
-version = 0.5
+description = Connects to the SCCM database and displays helpful information about status messages, software inventory, client health, and endpoint protection.
+version = 1.0
 
-#[package]
-#id = ta_sccm
+[package]
+id = ta_sccm
