--- a/default/inputs.conf
+++ b/default/inputs.conf
@@ -36,7 +36,7 @@ tail.rising.column = recordid
 
 [dbmon-tail://sccm/sccm_installed_software_dbinput]
 host = sccm
-index = sccm_software
+index = sccm
 interval = 5m
 output.format = kv
 output.timestamp = 1
