--- a/default/authorize.conf
+++ b/default/authorize.conf
@@ -1,3 +1,3 @@
 [role_sccm_user]
 importRoles = user
-srchIndexesDefault = default;sccm;sccm_software;sccm_status
+srchIndexesDefault = default;sccm;sccm_status
