--- a/inputs.conf
+++ b/inputs.conf
@@ -12,7 +12,7 @@
 [dbmon-tail://sccm/ta_sccm_malware_dbinput]
 host = sccm
 index = sccm
-interval = auto
+interval = 5m
 output.format = kv
 output.timestamp = 1
 output.timestamp.column = timestamp
@@ -21,10 +21,10 @@ query = SELECT \r\n  N'SystemCenterEndpointProtection' AS [vendor_product],\r\n 
 sourcetype = sccm:malware
 tail.rising.column = timestamp
 
-[dbmon-tail://sccm_shh/sccm_status_message_dbinput]
+[dbmon-tail://sccm/sccm_status_message_dbinput]
 host = sccm
 index = sccm_status
-interval = 1m
+interval = 5m
 output.format = kv
 output.timestamp = 1
 output.timestamp.column = timestamp
@@ -37,7 +37,7 @@ tail.rising.column = recordid
 [dbmon-tail://sccm/sccm_installed_software_dbinput]
 host = sccm
 index = sccm
-interval = 5m
+interval = 15m
 output.format = kv
 output.timestamp = 1
 output.timestamp.column = timestamp
@@ -49,7 +49,7 @@ tail.rising.column = timestamp
 [dbmon-tail://sccm/sccm_agent_discoveries_dbinput]
 host = sccm
 index = sccm
-interval = auto
+interval = 15m
 output.format = kv
 output.timestamp = 1
 output.timestamp.column = agenttime
@@ -62,7 +62,7 @@ table = sccm_agent_discoveries_dbinput
 [dbmon-tail://sccm/sccm_resource_dbinput]
 host = sccm
 index = sccm
-interval = auto
+interval = 10
 output.format = kv
 output.timestamp = 1
 output.timestamp.column = timestamp
