--- a/default/app.conf
+++ b/default/app.conf
@@ -15,5 +15,5 @@ author = ChrisSummers
 description = Connects to the SCCM database and displays helpful information about status messages, software inventory, client health, and endpoint protection.
 version = 1.0
 
-[package]
-id = ta_sccm
+#[package]
+#id = ta_sccm
