--- a/_dev/dbconnect2/inputs.conf
+++ b/_dev/dbconnect2/inputs.conf
@@ -7,7 +7,7 @@ interval = */10 * * * *
 max_rows = 10000
 mode = tail
 output_timestamp_format = yyyy-MM-dd HH:mm:ss
-query = WITH s as (\
+query = ;WITH s as (\
 SELECT \
   convert(datetime,SWITCHOFFSET(CONVERT(DATETIMEOFFSET(3), COALESCE(lastactivetime, disc.lastdiscoverytime)), DATENAME(TzOffset, SYSDATETIMEOFFSET()))) as [timestamp],\
   machineid as resourceid, \
@@ -104,7 +104,7 @@ interval = */5 * * * *
 max_rows = 10000
 mode = tail
 output_timestamp_format = yyyy-MM-dd HH:mm:ss
-query = with malware as (SELECT \
+query = ;with malware as (SELECT \
   m.detectiontime as [timestamp], \
   'SystemCenterEndpointProtection' AS vendor_product, \
   'SecurityIncident' AS [type], \ 
@@ -184,7 +184,7 @@ interval = */5 * * * *
 max_rows = 10000
 mode = tail
 output_timestamp_format = yyyy-MM-dd HH:mm:ss
-query = WITH attr AS \
+query = ;WITH attr AS \
 (SELECT recordid, \
 	[400] AS [packageid], \
 	[401] AS [advertisementid], \
@@ -290,7 +290,7 @@ interval = */15 * * * *
 max_rows = 10000
 mode = tail
 output_timestamp_format = yyyy-MM-dd HH:mm:ss
-query = with software as ( \
+query = ;with software as ( \
 select \
   [timestamp], \
   resourceid, \
