Added disabled = 0 to each dbinput

--- a/_dev/dbconnect2/inputs.conf
+++ b/_dev/dbconnect2/inputs.conf
@@ -95,6 +95,7 @@ sourcetype = sccm:resource
 tail_follow_only = 1
 tail_rising_column_name = timestamp
 ui_query_mode = advanced
+disabled = 0
 
 [mi_input://ta_sccm_malware_dbinput]
 connection = sccm
@@ -175,6 +176,7 @@ sourcetype = sccm:malware
 tail_follow_only = 1
 tail_rising_column_name = timestamp
 ui_query_mode = advanced
+disabled = 0
 
 [mi_input://sccm_status_message_dbinput]
 connection = sccm
@@ -281,6 +283,7 @@ sourcetype = sccm:status_message
 tail_follow_only = 1
 tail_rising_column_name = recordid
 ui_query_mode = advanced
+disabled = 0
 
 [mi_input://sccm_installed_software_dbinput]
 connection = sccm
@@ -334,6 +337,7 @@ sourcetype = sccm:installed_software
 tail_follow_only = 1
 tail_rising_column_name = timestamp
 ui_query_mode = advanced
+disabled = 0
 
 [mi_input://sccm_agent_discoveries_dbinput]
 connection = sccm
@@ -356,3 +360,4 @@ sourcetype = sccm:discovery
 tail_follow_only = 1
 tail_rising_column_name = agenttime
 ui_query_mode = advanced
+disabled = 0
